--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script src="https://www.paypal.com/sdk/js?client-id=AR17fOgG-UeolkD8GmWtRn3gsDOly-OF23SsTnqwgi6HhDqivzrG6QRTnhjtqOkLpiPs697K709tDMQG&currency=AUD"></script>
+
 </head>
 
 <body>
